--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="C:\Users\Asus\Downloads\WhatsApp Image 2024-10-11 at 18.37.52_b0339a9b.jpg" alt="Foto Muhamad Fauzan">
+            <img src="WhatsApp Image 2024-10-11 at 18.37.52_b0339a9b.jpg" alt="Foto Muhamad Fauzan">
             <div>
                 <h1>Muhamad Fauzan</h1>
                 <h2>Rekayasa Perangkat Lunak</h2>
